--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is Pokhara
+    <p>This kathmandu
         
     </p>
     <div class="nae">this kishor pun</div>
